Added project in sidebar
Added project in sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,6 +26,7 @@
       {% endif %}
     {% endfor %}
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub Repository</a>
+    <a class="sidebar-nav-item" href="{{ site.projects.first }}">Java 9 Exploration Kanban</a>
   </nav>
 
   <div class="sidebar-item">
