--- a/public/css/jdk-modules.css
+++ b/public/css/jdk-modules.css
@@ -15,6 +15,8 @@
 }
 
 .node:hover,
+.node-transitive-target,
+.node-transitive-source,
 .node--source,
 .node--target {
   font-weight: 700;
@@ -24,10 +26,20 @@
   fill: #2ca02c;
 }
 
+.node-transitive-target {
+  fill: #931919;
+}
+
+.node-transitive-source {
+  fill: #1ee232;
+}
+
 .node--target {
   fill: #d62728;
 }
 
+.link-transitive-target,
+.link-transitive-source,
 .link--source,
 .link--target {
   stroke-opacity: 1;
@@ -36,6 +48,14 @@
 
 .link--source {
   stroke: #d62728;
+}
+
+.link-transitive-target {
+  stroke: #931919;
+}
+
+.link-transitive-source {
+  stroke: #1ee232;
 }
 
 .link--target {
