--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,9 @@ layout: default
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
+{% if jekyll.environment == "production" %}
+            {% include comments.html %}
+{% endif %}
 
 <div class="related">
   <h2>Related Posts</h2>
